WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157479
"Main content" restrictions should not apply to media documents
https://bugs.webkit.org/show_bug.cgi?id=157479
Summary
"Main content" restrictions should not apply to media documents
Eric Carlson
Reported
2016-05-09 12:17:28 PDT
OverrideUserGestureRequirementForMainContent should not apply to a media document.
Attachments
Proposed patch.
(2.85 KB, patch)
2016-05-09 12:52 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2016-05-09 12:49:47 PDT
<
rdar://problem/25840861
>
Eric Carlson
Comment 2
2016-05-09 12:52:15 PDT
Created
attachment 278428
[details]
Proposed patch.
Eric Carlson
Comment 3
2016-05-10 07:23:59 PDT
Committed
r200587
:
https://trac.webkit.org/r200587
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug