"Main content" restrictions should not apply to media documents https://bugs.webkit.org/show_bug.cgi?id=157479 <rdar://problem/25840861>

Reviewed by Jer Noble.

No new tests, this change only applies to media documents in a top level document so it
isn't possible to have a layout test.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::HTMLMediaElement): Don't apply restrictions to a media document.


Canonical link: https://commits.webkit.org/175618@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200587 268f45cc-cd09-0410-ab3c-d52691b4dbfc